fix(Show): Fix show page not showing
Fix show page not showing and styles

--- a/client/src/views/Show/Styles.scss
+++ b/client/src/views/Show/Styles.scss
@@ -6,7 +6,7 @@
     height: auto;
 
     .showVideoContainer {
-        max-width: 1200px;
+        max-width: 80vw;
         display: flex;
         flex-direction: column;
         font-weight: bold;
@@ -16,7 +16,8 @@
         flex: 4;
 
         img {
-            max-height: 720px;
+            width: auto;
+            max-height: 70vh;
         }
 
         .videoDetails {
